# Sourcetrail

./: .clang-format  .git_commit_template.txt  .git_pre_commit_hook.sh  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  AUTHORS.txt  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  README.md  SPONSORS.md  appveyor.yml  entrypoint.sh
.github/: FUNDING.yml
.kdev4/: Sourcetrail.kdev4
JavaSmallTest/: JavaSmallTest.coatiproject
cmake/: BotanConfig.cmake  CLANGConfig.cmake  LinuxPackage.cmake  PrivateKey.h.in  PublicKey.h.in  add_files.cmake  create_source_groups.cmake  external.cmake  language_packages.h.in  licenses.cmake  licenses.h.in  linux_package.cmake  pre_install_linux.cmake  private_key.cmake  productVersion.h.in  publicKey.cmake  public_key.cmake  setWinXxBits.cmake  version.cmake  version.h.in  version.txt.in  version_setup.cmake
deployment/dockerfiles/: README.md
deployment/windows/: readme.txt  transform.mst
docs/documentation/: index.html  plugin_use_in_visual_studio.psd
ide_plugins/atom/: README.md
ide_plugins/eclipse/: README.md
ide_plugins/emacs/: README.md
ide_plugins/idea/: README.md
ide_plugins/qt_creator/: README.md
ide_plugins/sublime_text/: README.md  readme.txt
ide_plugins/vim/: README.md
ide_plugins/visual_studio/: README.md
ide_plugins/vs/: BeforeDeployCheck.ckl  BeforeDeployCheck.txt  README.md  Readme.txt  TestSolutionEdgeCases.txt  coati_plugin_vs.vsix  coati_plugin_vs_2012.vsix  coati_plugin_vs_2013.vsix  coati_plugin_vs_2015.vsix  sourcetrail_plugin_vs.vsix  vs_plugin.vsix
ide_plugins/vscode/: README.md
java_indexer/: pom.xml
script/: .clang-format  build.sh  buildonly.sh  clean.sh  create_windows_icon.sh  debug.sh  deploy_windows.sh  download_python_indexer.sh  extract_mail.sh  getSystemString.py  git-publish.sh  git-sync-master.sh  git-sync.sh  license.txt  packaging_windows.sh  release.sh  setup.sh  setup_git_hooks.sh  update_java_indexer.sh  update_python_indexer.sh  valgrind_debug.sh  valgrind_release.sh
script/docker/: createImage.sh  deleteDev.sh  restartDocker.sh  startDev.sh
setup/: license.txt
setup/3rdPartyLicenses/: CppSQLite_LICENSE.TXT  JavaSymbolSolver_LICENSE.TXT  botan_LICENSE.TXT  clang_LICENSE.TXT  qt_LICENSE.TXT  tinyxml_LICENSE.TXT
setup/Linux/: Coati.sh  Coati_trial.sh  README  RunCoati.sh  Sourcetrail.sh  coati  coati-mime.xml  coati.desktop  createAppDir.sh  createAppImage.sh  createIcons.sh  createPackages.sh  deinstall.sh  findAndCopyLibraries.sh  install.sh  libboost_date_time.so.1.55.0  libboost_system.so.1.55.0  libedit.so.0.0.52  libgpg-error.so.0  libpng16.so.16  libstdc++.so.6  libsystemd.so.0  removeConfigs.sh  sourcetrail-mime.xml  sourcetrail.desktop  uninstall.sh
setup/MacOSX/: Info.plist.in  Info_trial.plist.in  bundle_install.sh.in
setup/RSA_keys/: private-0.pem  private-sourcetrail.pem  public-sourcetrail.pem
setup/git/: git_pre_commit_hook.sh  git_pre_push_hook.sh
setup/macOS/: bundle_info.plist.in  bundle_install.sh.in
src/app/: CMakeLists.txt  LicenseChecker.h  includes.h.in  includesWindows.h  isTrial.cpp  licenses.h.in  main.cpp  version.h.in
src/indexer/: CMakeLists.txt  main.cpp
src/lib/: Application.cpp  Application.h  ApplicationSettings.cpp  ApplicationSettings.h  ApplicationStateMonitor.cpp  ApplicationStateMonitor.h  CMakeLists.txt  CxxProject.cpp  CxxProject.h  JavaProject.cpp  JavaProject.h  LanguagePackage.h  LanguagePackageManager.cpp  LanguagePackageManager.h  LicenseChecker.cpp  LicenseChecker.h  Project.cpp  Project.h  ProjectFactory.cpp  ProjectFactory.h  ProjectFactoryModule.cpp  ProjectFactoryModule.h  ProjectSettings.cpp  ProjectSettings.h  Settings.cpp  Settings.h  UpdateChecker.h  isTrial.h  utility.cpp  utility.h
src/lib_cxx/: CMakeLists.txt  CxxProject.cpp  CxxProject.h  LanguagePackageCxx.cpp  LanguagePackageCxx.h  ProjectFactoryModuleC.cpp  ProjectFactoryModuleC.h  ProjectFactoryModuleCpp.cpp  ProjectFactoryModuleCpp.h
src/lib_gui/: CMakeLists.txt  version.h.in
src/lib_java/: CMakeLists.txt  JavaProject.cpp  JavaProject.h  LanguagePackageJava.cpp  LanguagePackageJava.h  ProjectFactoryModuleJava.cpp  ProjectFactoryModuleJava.h
src/lib_license/: CMakeLists.txt  Generator.cpp  Generator.h  License.cpp  License.h  LicenseChecker.cpp  LicenseChecker.h  LicenseType.h
src/lib_parser/: CMakeLists.txt
src/lib_python/: CMakeLists.txt
src/lib_utility/: CMakeLists.txt
src/license_generator/: CMakeLists.txt  Generator.cpp  Generator.h  LicenseGenerator.cpp  LicenseGenerator.h  main.cpp
src/test/: CMakeLists.txt  CommandlineTestSuite.cpp  CommandlineTestSuite.h  ConfigManagerTestSuite.cpp  ConfigManagerTestSuite.h  CxxIncludeProcessingTestSuite.cpp  CxxIncludeProcessingTestSuite.h  CxxIndexSampleProjectsTestSuite.cpp  CxxIndexSampleProjectsTestSuite.h  CxxParserTestSuite.cpp  CxxParserTestSuite.h  CxxTypeNameTestSuite.cpp  CxxTypeNameTestSuite.h  DataTypeTestSuite.h  DictionaryTestSuite.h  FileManagerTestSuite.cpp  FileManagerTestSuite.h  FilePathFilterTestSuite.cpp  FilePathFilterTestSuite.h  FilePathTestSuite.cpp  FilePathTestSuite.h  FileSystemTestSuite.cpp  FileSystemTestSuite.h  GeneratorTestSuite.h  GraphFilterConductorTestSuite.h  GraphFilterTestSuite.h  GraphTestSuite.cpp  GraphTestSuite.h  HierarchyCacheTestSuite.cpp  JavaIndexSampleProjectsTestSuite.cpp  JavaIndexSampleProjectsTestSuite.h  JavaParserTestSuite.cpp  JavaParserTestSuite.h  LicenseCheckerTestSuite.h  LicenseGeneratorTestSuite.h  LogManagerTestSuite.cpp  LogManagerTestSuite.h  LowMemoryStringMapTestSuite.cpp  LowMemoryStringMapTestSuite.h  MatrixBaseTestSuite.cpp  (+57 more)
src/trial/: CMakeLists.txt  isTrial.cpp  main.cpp
testing/: missing.txt
testing/code_view/: code_view_tests.srctrlprj
testing/graph_view/: graph_view_tests.srctrlprj
testing/history/: history_tests.srctrlprj
testing/keyboard_controls/: keyboard_controls_tests.srctrlprj
testing/search_view/: search_view_tests.srctrlprj
web/blog/: README.md  _config.yml  _config_local.yml  _config_staging.yml  feed.xml  index.html
web/documentation/: index.html
(+2716 files in other folders)
